[package]
name = "ai_kit"
version = "0.1.0"
authors = ["Josh Marlow <joshmarlow@gmail.com>"]

[dependencies]
itertools = "0.5.1"
permutohedron = "0.2.1"
serde = "0.9.5"
serde_derive = "0.9.5"
serde_json = "0.9"
uuid = { version = "0.4", features = ["v4"] }

[features]
default = ["with-planner", "with-forward-inference", "with-datum", "with-rule", "with-constraint", "with-pedigree"]

with-planner = []
with-forward-inference = []
with-datum = []
with-rule = []
with-constraint = []
with-pedigree = []
