[package]
name = "ai_kit"
version = "0.1.0"
authors = ["Josh Marlow <joshmarlow@gmail.com>"]
repository = "https://github.com/joshmarlow/ai_kit-rs.git"
description = "Collection of classic AI algorithms with convenient interfaces"
license = "MIT"

[badges]
travis-ci = { repository = "joshmarlow/ai_kit-rs" }

[dependencies]
itertools = "0.5.1"
serde = "0.9.5"
serde_derive = "0.9.5"
serde_json = "0.9"
uuid = { version = "0.4", features = ["v4"] }

[features]
default = ["with-planner", "with-forward-inference", "with-datum", "with-rule", "with-pedigree"]

with-planner = ["with-constraint"]
with-forward-inference = ["with-planner"]
with-datum = []
with-rule = ["with-constraint"]
with-constraint = []
with-pedigree = []
